Changing flexbox justify/alignment doesn't update their positioning https://bugs.webkit.org/show_bug.cgi?id=88366

Reviewed by Ojan Vafai.

Source/WebCore:

Test: css3/flexbox/style-change.html

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::diff): Since these member variables were moved
out of StyleFlexibleBoxData, we have to compare them in RenderStyle::diff.

LayoutTests:

* css3/flexbox/style-change-expected.txt: Added.
* css3/flexbox/style-change.html: Added.


Canonical link: https://commits.webkit.org/106226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119564 268f45cc-cd09-0410-ab3c-d52691b4dbfc